# AGH-PO1

Lab1/LinkedList/: CMakeLists.txt  main.cpp
Lab1/LinkedList/include/: MyList.h  MyNode.h
Lab1/LinkedList/src/: MyList.cpp  MyNode.cpp
Lab10/STL practice/: CMakeLists.txt  main.cpp
Lab10/STL practice/include/: Data.h  Sum.h  Table.h
Lab10/STL practice/src/: Data.cpp  Table.cpp
Lab11/Templates/: CMakeLists.txt  main.cpp
Lab11/Templates/include/: AbstractQuantity.h  ArrayOfQuantities.h  Quantity.h  QuantityVar.h  QuantityWithUnits.h
Lab11/Templates/src/: Quantity.cpp
Lab12/Smart Pointer/: UniquePointer.h  main.cpp
Lab12/Template functions/: Lokaj.h  Pomieszczenie.cpp  Pomieszczenie.h  main.cpp
Lab13/Template pair and array/: PairOfNumbers.h  RangeArray.cpp  RangeArray.h  main.cpp
Lab2/ComplexNumber/: ComplexNumber.cpp  ComplexNumber.h  main.cpp
Lab2/MyVector/: CMakeLists.txt  main.cpp
Lab2/MyVector/include/: V.h
Lab2/MyVector/src/: V.cpp
Lab3/Program1/: CMakeLists.txt  FancyText.cpp  FancyText.h  main.cpp
Lab4/Functors/: CMakeLists.txt  main.cpp
Lab4/Functors/include/: Funkcje.h  ZlozenieFunkcji.h
Lab4/Functors/src/: ZlozenieFunkcji.cpp
Lab4/Math Inheritance/: Algo.h  Argumenty.cpp  Argumenty.h  Pierwiastek.h  Suma.h  main.cpp
Lab5/Inheritance/: CMakeLists.txt  main.cpp
Lab5/Inheritance/include/: Figura.h  KontenerFigur.h  Prostokat.h  Wierzcholek.h
Lab5/Inheritance/src/: Figura.cpp  KontenerFigur.cpp  Prostokat.cpp  Wierzcholek.cpp
Lab5/Math_Inheritance/: Derivative.cpp  Derivative.h  Function.h  Math.cpp  Math.h  Quadratic.cpp  Quadratic.h  main.cpp
Lab6/Virtual Inherritance/: CMakeLists.txt  main.cpp
Lab6/Virtual Inherritance/include/: Operation.h  Primitive.h  Product.h  Ratio.h  Sum.h
Lab6/Virtual Inherritance/src/: Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
Lab7/Dynamic cast/: CMakeLists.txt  main.cpp
Lab7/Dynamic cast/include/: Base.h  Dir.h  File.h
Lab7/Dynamic cast/src/: Base.cpp  Dir.cpp  File.cpp
Lab8/Multiple Inheritance/include/: Bomb.h  Boss.h  HP.h  Hurting.h
Lab8/Multiple Inheritance/src/: gameobj.cpp
Lab8/Multiple_Inheritance/: CMakeLists.txt  main.cpp
Lab8/Multiple_Inheritance/include/: Character.h  Player.h  gameobj.h  main.h
Lab8/Multiple_Inheritance_2/: Main.h  Narzedzie.h  Nazwany.h  NazwanyBaza.h  PilaSpalinowa.h  Pojazd.h  Reczny.h  Rower.h  Samochod.h  Spalinowy.h  Srubokret.h  main.cpp
Lab8/Multiple_Inheritance_Amfibia/: Amfibia.h  Motorowka.h  Pojazd.h  PojazdLadowy.h  Pojazdy.h  PredkoscMaksymalna.h  Rower.h  Samochod.h  main.cpp
Lab9/Set & Vector/: CMakeLists.txt  main.cpp
Lab9/Set & Vector/include/: Point2D.h
Lab9/Set & Vector/src/: Point2D.cpp
